更换环境适应linux，完成底层putchar功能，完成汇编到c转换

--- a/src/ipl/makefile
+++ b/src/ipl/makefile
@@ -2,10 +2,10 @@ TOOLS_PATH	=	../../bintools
 OUT_PATH	=	../../out#SimOS.img输出文件
 
 
-REMOVE	=	rm 
+REMOVE	=	rm -f
 
 MAKE	=	make -r
-AS		=	as
+GCC		=	gcc -m16 -c
 OBJCOPY	=	objcopy
 BINCOPY=	$(TOOLS_PATH)/bincopy 
 OBJDUMP	=	objdump 
@@ -17,16 +17,16 @@ default :
 	$(MAKE) ipl.bin 
 
 ipl.o : ipl.s makefile
-	$(AS) --32 -c ipl.s -o ipl.o
-ipl.to : ipl.o makefile
-	$(OBJCOPY) -R .note -R .comment -S -O binary ipl.o ipl.to
-ipl.bin : ipl.to makefile
-	$(BINCOPY) ipl.to $(STR_ADDR) $(END_ADDR) ipl.bin
+	$(GCC)  ipl.s -o ipl.o
+ipl.bin : ipl.o makefile
+	$(OBJCOPY) -j .boottext -O binary ipl.o ipl.bin
+# ipl.bin : ipl.to makefile
+# 	$(BINCOPY) ipl.to $(STR_ADDR) $(END_ADDR) ipl.bin
 
 bin : 
 	$(MAKE) ipl.bin
 clean : 
-	$(REMOVE) ipl.o ipl.to ipl.bin
+	$(REMOVE) *.o *.to *.bin
 
 dump : 
 	$(OBJDUMP) -D -m i8086 -b binary ipl.bin
