完成number函数，添加error处理接口

--- a/src/os/arch/x86/boot/makefile
+++ b/src/os/arch/x86/boot/makefile
@@ -8,7 +8,9 @@ REMOVE	= rm  -f
 
 OBJCOPY = objcopy -R .comment -R .note  
 
-OBJSET = header.o Fmain.o tty.o bioscalls.o ioboot.o bstring.o
+OBJSET = tty.o bioscalls.o\
+		ioboot.o bstring.o video.o\
+        header.o Fmain.o error.o
 
 %.o : %.c makefile
 	$(GCC)  $*.c -o $(OBJS_PATH)/$*.o
