准备保护模式

--- a/src/os/boot/makefile
+++ b/src/os/boot/makefile
@@ -10,7 +10,7 @@ OBJCOPY = objcopy -R .comment -R .note
 
 OBJSET = tty.o bioscalls.o\
 		ioboot.o bstring.o video.o\
-        header.o Fmain.o error.o
+        header.o Fmain.o error.o memory.o
 
 %.o : %.c makefile
 	$(GCC)  $*.c -o $(OBJS_PATH)/$*.o
