添加保护模式中

--- a/src/os/boot/makefile
+++ b/src/os/boot/makefile
@@ -2,7 +2,7 @@ OBJS_PATH = .
 
 INCLUDE_PATH = ../include/
 
-GCC 	= gcc -m16 -c -I $(INCLUDE_PATH)
+GCC 	= gcc -m16 -c -I $(INCLUDE_PATH) 
 LD 		= ld -m elf_i386 
 REMOVE	= rm  -f
 
@@ -10,13 +10,15 @@ OBJCOPY = objcopy -R .comment -R .note
 
 OBJSET = tty.o bioscalls.o\
 		ioboot.o bstring.o video.o\
-        header.o Fmain.o error.o memory.o
+        header.o Fmain.o error.o \
+		memory.o protectmode.o pm_jump.o \
+		pm_jump.o
 
 %.o : %.c makefile
 	$(GCC)  $*.c -o $(OBJS_PATH)/$*.o
 
-%.o : %.s  makefile 
-	$(GCC)  $*.s -o $(OBJS_PATH)/$*.o 
+%.o : %.S  makefile 
+	$(GCC)  $*.S -o $(OBJS_PATH)/$*.o 
 
 boot.or : $(OBJSET) boot.ld makefile
 	$(LD) $(OBJS_PATH)/*.o -T boot.ld  -o $(OBJS_PATH)/boot.or
